# schwarzschild-raytracer

./: .editorconfig  CMakeLists.txt  README.md
assets/shaders/: black_hole.frag  full_screen_quad.vert
assets/textures/: sources.txt
include/glad/: glad.h
src/: glad.c  main.cpp
src/lib/AnimationManager/: animationManager.cpp  animationManager.h
src/lib/Animations/Animation/: animation.cpp  animation.h
src/lib/Animations/BSplineAnimation/: bSplineAnimation.cpp  bSplineAnimation.h
src/lib/Animations/BobbingAnimation/: bobbingAnimation.cpp  bobbingAnimation.h
src/lib/Animations/CombinedAnimation/: combinedAnimation.cpp  combinedAnimation.h
src/lib/Animations/IdleAnimation/: idleAnimation.cpp  idleAnimation.h
src/lib/Animations/LambdaAnimation/: lambdaAnimation.cpp  lambdaAnimation.h
src/lib/Animations/RotateAnimation/: rotateAnimation.cpp  rotateAnimation.h
src/lib/Animations/TrajectoryAnimation/: trajectoryAnimation.cpp  trajectoryAnimation.h
src/lib/Animations/TransformAnimation/: transformAnimation.cpp  transformAnimation.h
src/lib/Animations/TranslateAnimation/: translateAnimation.cpp  translateAnimation.h
src/lib/Camera/: camera.cpp  camera.h
src/lib/Disk/: disk.cpp  disk.h
src/lib/HollowDisk/: hollowDisk.cpp  hollowDisk.h
src/lib/Input/: input.cpp  input.h
src/lib/LateralCylinder/: lateralCylinder.cpp  lateralCylinder.h
src/lib/Light/: light.cpp  light.h
src/lib/Material/: material.cpp  material.h
src/lib/MaterialObject/: materialObject.cpp  materialObject.h
src/lib/Object/: object.cpp  object.h
src/lib/ObjectLoader/: objectLoader.cpp  objectLoader.h
src/lib/Objects/Box/: box.cpp  box.h
src/lib/Objects/Camera/: camera.cpp  camera.h
src/lib/Objects/Disk/: disk.cpp  disk.h
src/lib/Objects/HollowDisk/: hollowDisk.cpp  hollowDisk.h
src/lib/Objects/LateralCylinder/: lateralCylinder.cpp  lateralCylinder.h
src/lib/Objects/Light/: light.cpp  light.h
src/lib/Objects/Material/: material.cpp  material.h
src/lib/Objects/MaterialObject/: materialObject.cpp  materialObject.h
src/lib/Objects/Object/: object.cpp  object.h
src/lib/Objects/Plane/: plane.cpp  plane.h
src/lib/Objects/Rectangle/: rectangle.cpp  rectangle.h
src/lib/Objects/Sphere/: sphere.cpp  sphere.h
src/lib/Objects/Transform/: transform.cpp  transform.h
src/lib/Plane/: plane.cpp  plane.h
src/lib/Sphere/: sphere.cpp  sphere.h
src/lib/Transform/: transform.cpp  transform.h
src/lib/image_utils/: image_utils.cpp  image_utils.h
src/lib/shader_utils/: shader_utils.cpp  shader_utils.h
src/lib/utils/: utils.cpp  utils.h
